update side note

--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -39,11 +39,11 @@
 <p>Данные взяты из &#8220;Computer architecture: a quantitative approach&#8221; John L. Hennessy, David A. Patterson, Andrea C. Arpaci-Dusseau by way of Tony Albrecht&#8217;s &#8220;<a href="http://research.scee.net/files/presentations/gcapaustralia09/Pitfalls_of_Object_Oriented_Programming_GCAP_09.pdf">Pitfalls of Object-Oriented Programming</a>&#8220;.</p>
 </aside>
 <p>Для того, чтобы сверхбыстрый процессор провернул свои вычисления, ему, вообще-то, нужно выгрузить данные из главной памяти в свои регистры. И как видите, память не так быстра, как скорость процессора. Даже близко не так.</p>
-<p>С современным уровнем развития железа, может понадобиться <em>сотни</em> тактов, чтобы вытащить байт из <span name="ram">памяти</span>. Если большинство операций связано с данными, и нужно сотни тактов, чтобы их получить - как так получается, что наши процессоры не бездельничают 99% времени, ожидая поступления данных?</p>
-<p>На самом деле, они <em>действительно</em> ждут памать удивительно большую часть своего времени, но все не так плохо, как это могло бы быть. Чтобы объяснить почему, давайте совершим путешествие в Царство Длинных Лирических Отступлений&#8230;</p>
+<p>С современным уровнем развития железа, может понадобиться <em>сотни</em> тактов, чтобы вытащить байт из <span name="ram">RAM</span>. Если большинство операций связано с данными, и нужно сотни тактов, чтобы их получить - как так получается, что наши процессоры не бездельничают 99% времени, ожидая поступления данных?</p>
+<p>На самом деле, они <em>действительно</em> ждут памать удивительно большую часть своего времени, но все не так плохо, как это могло бы быть. Чтобы объяснить почему, давайте совершим сделаем длинное лирическое отступление&#8230;</p>
 <aside name="ram">
-<p>Она называется RAM (&#8220;Random access memory&#8221;) потому что, в отличие от дисковых накопителей, можно получить доступ к любому участку памяти одинаково быстро (это в теории). То есть не нужно считывать всю память по порядку, чтоб добраться до нужного места.</p>
-<p>Или, по крайней мере, в обычном случае не нужно. Как будет видно дальше, RAM не всегда настолько рандомна, как кажется.</p>
+<p>Она называется RAM (&#8220;Random access memory&#8221;) потому что можно получить доступ к любому участку памяти одинаково быстро (это в теории). То есть не нужно считывать все байты по очереди, чтоб добраться до нужного места.</p>
+<p>Ну, <em>обычно</em> не нужно. Как будет видно дальше, RAM не всегда настолько гибка, как кажется.</p>
 </aside>
 <h3><a href="#a-data-warehouse" name="a-data-warehouse">A data warehouse</a></h3>
 <p>Imagine you&#8217;re an accountant in a tiny little office. Your job is to request a box of papers then do some <span name="accountant">accountant</span>-y stuff with them&thinsp;&mdash;&thinsp;add up a bunch of numbers or something. You must do this for specific labeled boxes according to some arcane logic that only makes sense to other accountants.</p>
