update script to deal with russian chapters and english file names

--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -786,7 +786,7 @@ be global.</p>
 </ul>
 <nav>
   <span class="prev">&larr; <a href="event-queue.html">Предыдущая глава</a></span>
-  <span class="next"><a href="низкоуровневая-оптимизация.html">Next Chapter</a> &rarr;</span>
+  <span class="next"><a href="optimization-patterns.html">Next Chapter</a> &rarr;</span>
   <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
 </nav>
 </div>
