--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -26,7 +26,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Dirty Flag</h1>
-<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="низкоуровневая-оптимизация.html">Низкоуровневая оптимизация</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="optimization-patterns.html">Низкоуровневая оптимизация</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Avoid unnecessary work by deferring it until the result is needed.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
