--- a/html/introduction.html
+++ b/html/introduction.html
@@ -30,8 +30,8 @@
 <p>In fifth grade, my friends and I were given access to a little unused
 classroom housing a couple of very beat up TRS-80s. Hoping to inspire us, a
 teacher found a printout of some simple BASIC programs for us to tinker with.</p>
-<p>The audiocasette drives on the computers were broken, so any time we wanted to
-run one some code, we&#8217;d have to carefully type it in from scratch. This led us
+<p>The audio casette drives on the computers were broken, so any time we wanted to
+run some code, we&#8217;d have to carefully type it in from scratch. This led us
 to prefer programs that were only a few lines long:</p>
 <p><span name="radical"></span></p>
 <div class="codehilite"><pre><span class="mi">10</span> <span class="n">PRINT</span> <span class="s">&quot;BOBBY IS RADICAL!!!&quot;</span>
