--- a/html/command.html
+++ b/html/command.html
@@ -298,9 +298,9 @@ making a networked multi-player game.</p>
 
 <h2><a href="#undo-and-redo" name="undo-and-redo">Undo and Redo</a></h2>
 <p>The last example is the most well-known use of this pattern. If a command object
-can <em>do</em> things, it&#8217;s a small step for it be able to <em>undo</em> them. Undo is used
-in some strategy games where you can roll back moves that you didn&#8217;t like. It&#8217;s
-<em>de rigueur</em> in tools that people use to <em>create</em> games. The <span
+can <em>do</em> things, it&#8217;s a small step for it to be able to <em>undo</em> them. Undo is
+used in some strategy games where you can roll back moves that you didn&#8217;t like.
+It&#8217;s <em>de rigueur</em> in tools that people use to <em>create</em> games. The <span
 name="hate">surest way</span> to make your game designers hate you is giving
 them a level editor that can&#8217;t undo their fat-fingered mistakes.</p>
 <aside name="hate">
