--- a/html/command.html
+++ b/html/command.html
@@ -547,8 +547,8 @@ functional paradigm is for many problems.</p>
     some cases, especially where your object model is hierarchical, it may not
     be so cut-and-dried. An object may respond to a command, or it may decide to
     pawn it off on some subordinate object. If you do that, you&#8217;ve got yourself
-    a <a class="gof-pattern" href="http://en.wikipedia.org/wiki/Chain-of-
-    responsibility_pattern">Chain of Responsibility</a>.</p>
+    a <a class="gof-pattern" href="
+    http://en.wikipedia.org/wiki/Chain-of-responsibility_pattern">Chain of Responsibility</a>.</p>
 </li>
 <li>
 <p>Some commands are stateless chunks of pure behavior like the <code>JumpCommand</code>
